--- a/src/main/resources/templates/admin/item/menu_generator_list.html
+++ b/src/main/resources/templates/admin/item/menu_generator_list.html
@@ -84,7 +84,7 @@
 									action="#"
 									method="post" 
 									th:action="@{/admin/menuCreate}">
-									<input type="hidden" name="menuId" th:value="${mObj.menuId}"/>
+									<input type="hidden" name="loadForEditmenuId" th:value="${mObj.menuId}"/>
 									<input type="hidden" name="changeMenuType" value="false"/>
 									<button 
 										type="submit"
