On each save new option added in stack. But do not change item type. It still looses the whole stack.

--- a/src/main/resources/templates/admin/item/menu_generator.html
+++ b/src/main/resources/templates/admin/item/menu_generator.html
@@ -97,7 +97,7 @@
 					<div class="panel-body">
 						<div class="col-md-12">
 							<div class="col-md-12">
-								<!-- <input type="hidden" th:field="*{customMenuItemObj.customMenuItemId}" >  -->
+								<input type="hidden" th:field="*{customMenuItemObj.customMenuItemId}" > 
 								<textarea rows="4" 
 									cols="100%" 
 									th:field="*{customMenuItemObj.customizationDescription}" 
