--- a/src/main/resources/templates/admin/item/menu_generator_list.html
+++ b/src/main/resources/templates/admin/item/menu_generator_list.html
@@ -85,7 +85,7 @@
 									method="post" 
 									th:action="@{/admin/menuCreate}">
 									<input type="hidden" name="loadForEditmenuId" th:value="${mObj.menuId}"/>
-									<input type="hidden" name="changeMenuType" value="false"/>
+									<input type="hidden" name="requestType" value="LoadForEdit"/>
 									<button 
 										type="submit"
 										class="btn btn-xs">
@@ -110,6 +110,11 @@
 						
 					</tbody>
 				</table>
+			</div>
+			<div class="col-md-12" align="center">
+				<form th:action="@{/admin/menuCreate}">
+					<button class="btn btn-lg btn-warning btn-block" type="Submit">Add / Edit / Update Menu Item</button>
+				</form>	
 			</div>
 		</div>
 	</div>
