Header and Navigation setup

--- a/src/main/resources/templates/admin/item/base_item.html
+++ b/src/main/resources/templates/admin/item/base_item.html
@@ -14,7 +14,7 @@
 </script>
 </head>
 <body>
-
+<div th:include="header :: header-nav"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12" style="margin-top: 10px;">
