--- a/src/main/resources/templates/admin/item/item_type.html
+++ b/src/main/resources/templates/admin/item/item_type.html
@@ -8,6 +8,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div th:include="header :: header-nav"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12" align="center" style="margin-top: 10px;">
