--- a/src/main/resources/templates/admin/item/menu_generator_list.html
+++ b/src/main/resources/templates/admin/item/menu_generator_list.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+<div th:include="header :: header-nav"></div>
 <div class="container">
 	<div class="row">
 		<div class="col-md-12" align="center" style="margin-top: 10px;">
