--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -36,6 +36,12 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li>
+        	<a href="#">
+        		Cart
+        		<span class="badge badge-secondary" th:text="${session.Cart.cartItems.length}" th:unless="${session == null}">0</span>
+        	</a>
+        </li>
         <li><a href="#">Login</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User Name <span class="caret"></span></a>
