--- a/src/main/resources/templates/item_for_customer/fixed_menu_list.html
+++ b/src/main/resources/templates/item_for_customer/fixed_menu_list.html
@@ -4,12 +4,12 @@
 <meta charset="ISO-8859-1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Fixed Menu List</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<script src="../js/jquery-3.2.1.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 <script>
 function order(menuId){
-	alert(menuId);
+	//alert(menuId);
 	document.getElementById('menuId').value=menuId;
 	document.getElementById('orderForm').submit();
 }
