Visible Cart Item for each link + Initial Setup of custom menu selection (DB Setup)

--- a/src/main/resources/templates/item_for_customer/customize_menu_list.html
+++ b/src/main/resources/templates/item_for_customer/customize_menu_list.html
@@ -7,6 +7,17 @@
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <script src="../js/jquery-3.2.1.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
+<script type="text/javascript">
+
+var name = new Array();
+total_price = function(radioOrCheck, id, price){
+	//alert(id+' -- '+price);
+	//var jsonObj = new JSON()
+	//name.push(id);
+	//alert(JSON.stringify(name));
+}
+
+</script>
 </head>
 <body>
 <div th:include="header :: header-nav"></div>
@@ -28,27 +39,39 @@
 						</div>
 						<div class="col-md-12" th:unless="${#lists.isEmpty(mIQObj.listOfAvailableOptions)}" style="margin-top: 5px;">
 							<div class="col-md-3" th:each="biObj, start:${mIQObj.listOfAvailableOptions}">
-								<!-- 
-								<i class="glyphicon glyphicon-record" aria-hidden="true" th:if="${mIQObj.questionOptionType.id}==1"></i>
-								<i class="glyphicon glyphicon-unchecked" aria-hidden="true" th:if="${mIQObj.questionOptionType.id}==2"></i>
-								&nbsp;
-								<label th:text="${biObj.itemName}+' ($ '+${biObj.price}+')'"></label>
- 								-->
-								<input type="radio" 
-									th:if="${mIQObj.questionOptionType.id}==1"
-									th:value="${biObj.baseItemId}"
-									th:name="${'custom_selection_'+mIQObj.customMenuItemOptionId}" 
-									th:text="${biObj.itemName}+' ($ '+${biObj.price}+')'"/>
 								
-								<input type="checkbox" 
-									th:if="${mIQObj.questionOptionType.id}==2"
-									th:value="${biObj.baseItemId}"
-									th:name="${'custom_selection_'+mIQObj.customMenuItemOptionId}"
-									th:text="${biObj.itemName}+' ($ '+${biObj.price}+')'"/>
+								<div th:if="${mIQObj.questionOptionType.id}==1">
+									<input type="radio" 
+										th:value="${biObj.baseItemId}"
+										th:onclick="'total_price(\'radio\',\'custom_selection_'+${mIQObj.customMenuItemOptionId}+'\',\''+${biObj.price}+'\')'"
+										th:id="${'custom_selection_'+mIQObj.customMenuItemOptionId+'_'+biObj.baseItemId}"
+										th:name="${'custom_selection_'+mIQObj.customMenuItemOptionId}"/>
+									<label 
+										th:text="' '+${biObj.itemName}+' ($ '+${biObj.price}+')'"
+										th:for="${'custom_selection_'+mIQObj.customMenuItemOptionId+'_'+biObj.baseItemId}">
+										Radio
+									</label>
+								</div>
+
+								<div th:if="${mIQObj.questionOptionType.id}==2">
+									<input type="checkbox" 
+										th:value="${biObj.baseItemId}"
+										th:onclick="'total_price(\'Check\',\'custom_selection_'+${mIQObj.customMenuItemOptionId}+'\',\''+${biObj.price}+'\')'"
+										th:id="${'custom_selection_'+mIQObj.customMenuItemOptionId+'_'+biObj.baseItemId}"
+										th:name="${'custom_selection_'+mIQObj.customMenuItemOptionId}"/>
+									<label 
+										th:text="' '+${biObj.itemName}+' ($ '+${biObj.price}+')'"
+										th:for="${'custom_selection_'+mIQObj.customMenuItemOptionId+'_'+biObj.baseItemId}">
+										Checkbox
+									</label>
+								</div>								
 							</div>
 						</div>
 					</div>
 				</div>
+		</div>
+		<div>
+			<button class="btn btn-sm">Add To Cart</button>
 		</div>
 	</div>
 </div>
