All Cart Operation Completed. Except placing an order.

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -37,8 +37,8 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li th:unless="${cartItemsCount} == null">
-        	<a href="#">
-        		Cart (<span th:text="${cartItemsCount}"></span>)
+        	<a th:href="@{/showCart}">
+        		Cart <span class="badge" th:text="${cartItemsCount}"></span>
         	</a>
         </li>
         <li th:if="${username} == null"><a href="/login">Login</a></li>
