--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -46,7 +46,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:unless="${username} == null"><span th:text="${username}">User Name</span> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Profile</a></li>
-            <li><a href="#">Ordered Item</a></li>
+            <li><a th:href="@{/showOrder}">Ordered Item</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Logout</a></li>
           </ul>
