--- a/src/main/resources/templates/item_for_customer/show_user_cart.html
+++ b/src/main/resources/templates/item_for_customer/show_user_cart.html
@@ -83,7 +83,13 @@ function cartOperation(cartItemId, type){
 			<b>Sub Total : <span th:text="${'$ '+grandTotalPrice}">Price</span></b>
 		</div>
 		<div class="col-md-2">
-			<button class="btn btn-primary">Place Order</button>
+			<form id="placeOrder" 
+				th:action="@{/orderPlaceCancel}"
+				th:method="post">
+				<input type="hidden" id="orderId" name="orderId" th:value="${unOrderedOrder.orderId}"/>
+				<input type="hidden" id="typeOrder" name="type" th:value="PLACE"/>
+				<button class="btn btn-primary" type="submit">Place Order</button>
+			</form>
 		</div>
 	</div>
 </div>
