--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -26,6 +26,8 @@
         <li th:class="${activeHeaderMenu == 'MANAGE_ITEM_TYPE' || activeHeaderMenu == 'MANAGE_ITEM' || activeHeaderMenu == 'ADD_MENU' || activeHeaderMenu == 'LIST_MENU'}?'dropdown active':'dropdown'">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin Section<span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li th:class="${activeHeaderMenu == 'ORDER_MGMT'}?'active':''"><a th:href="@{/admin/orderMgmt}">Customer Order Management</a></li>
+            <li role="separator" class="divider"></li>
             <li th:class="${activeHeaderMenu == 'MANAGE_ITEM_TYPE'}?'active':''"><a th:href="@{/admin/itemType}">Manage Item Type</a></li>
             <li role="separator" class="divider"></li>
             <li th:class="${activeHeaderMenu == 'MANAGE_ITEM'}?'active':''"><a th:href="@{/admin/baseItem}">Manage Item</a></li>
@@ -48,7 +50,7 @@
             <li><a href="#">Profile</a></li>
             <li><a th:href="@{/showOrder}">Ordered Item</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Logout</a></li>
+            <li><a th:href="@{/logout}">Logout</a></li>
           </ul>
         </li>
       </ul>
